--- a/multilabel_classifiers/DemoMultilabelClassifiers.ipynb
+++ b/multilabel_classifiers/DemoMultilabelClassifiers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,23 +34,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  15 out of  15 | elapsed: 143.4min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean_fit_time': array([251.65596199, 317.93201618, 315.16662455]),\n",
+      " 'mean_score_time': array([39.06691628, 64.06045327, 63.96730871]),\n",
+      " 'mean_test_score': array([0.62578146, 0.49753456, 0.49753456]),\n",
+      " 'mean_train_score': array([0.63515892, 0.49753458, 0.49753458]),\n",
+      " 'param_estimator__bag_of_words__max_features': masked_array(data=[500, 500, 500],\n",
+      "             mask=[False, False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__bag_of_words__ngram_range': masked_array(data=[(1, 2), (1, 2), (1, 2)],\n",
+      "             mask=[False, False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__bag_of_words__stop_words': masked_array(data=['english', 'english', 'english'],\n",
+      "             mask=[False, False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__classifier__C': masked_array(data=[100.0, 0.1, 0.0001],\n",
+      "             mask=[False, False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__dim_reduct__n_components': masked_array(data=[300, 300, 300],\n",
+      "             mask=[False, False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__normalizer__norm': masked_array(data=['l2', 'l2', 'l2'],\n",
+      "             mask=[False, False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'params': [{'estimator__bag_of_words__max_features': 500,\n",
+      "             'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      "             'estimator__bag_of_words__stop_words': 'english',\n",
+      "             'estimator__classifier__C': 100.0,\n",
+      "             'estimator__dim_reduct__n_components': 300,\n",
+      "             'estimator__normalizer__norm': 'l2'},\n",
+      "            {'estimator__bag_of_words__max_features': 500,\n",
+      "             'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      "             'estimator__bag_of_words__stop_words': 'english',\n",
+      "             'estimator__classifier__C': 0.1,\n",
+      "             'estimator__dim_reduct__n_components': 300,\n",
+      "             'estimator__normalizer__norm': 'l2'},\n",
+      "            {'estimator__bag_of_words__max_features': 500,\n",
+      "             'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      "             'estimator__bag_of_words__stop_words': 'english',\n",
+      "             'estimator__classifier__C': 0.0001,\n",
+      "             'estimator__dim_reduct__n_components': 300,\n",
+      "             'estimator__normalizer__norm': 'l2'}],\n",
+      " 'rank_test_score': array([1, 2, 2]),\n",
+      " 'split0_test_score': array([0.63196126, 0.49372661, 0.49372661]),\n",
+      " 'split0_train_score': array([0.63623356, 0.4984866 , 0.4984866 ]),\n",
+      " 'split1_test_score': array([0.62887959, 0.49086507, 0.49086507]),\n",
+      " 'split1_train_score': array([0.63441748, 0.49920203, 0.49920203]),\n",
+      " 'split2_test_score': array([0.62139555, 0.49284614, 0.49284614]),\n",
+      " 'split2_train_score': array([0.63623356, 0.49870673, 0.49870673]),\n",
+      " 'split3_test_score': array([0.62711864, 0.5040722 , 0.5040722 ]),\n",
+      " 'split3_train_score': array([0.63221617, 0.49590006, 0.49590006]),\n",
+      " 'split4_test_score': array([0.61955086, 0.50616469, 0.50616469]),\n",
+      " 'split4_train_score': array([0.63669381, 0.4953775 , 0.4953775 ]),\n",
+      " 'std_fit_time': array([6.47827505, 1.54363983, 1.25382338]),\n",
+      " 'std_score_time': array([0.51665603, 0.28227857, 0.36636648]),\n",
+      " 'std_test_score': array([0.00463959, 0.00629565, 0.00629565]),\n",
+      " 'std_train_score': array([0.00166584, 0.00157387, 0.00157387])}\n",
+      "=================  Classification report  =================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.89      0.73      0.80      4549\n",
+      "          1       0.00      0.00      0.00       460\n",
+      "          2       0.90      0.72      0.80      2522\n",
+      "          3       0.50      0.06      0.10       137\n",
+      "          4       0.75      0.57      0.65      2349\n",
+      "          5       0.70      0.18      0.29       397\n",
+      "\n",
+      "avg / total       0.81      0.63      0.70     10414\n",
+      "\n",
+      "=================     Best parameters     =================\n",
+      "{'estimator__bag_of_words__max_features': 500,\n",
+      " 'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      " 'estimator__bag_of_words__stop_words': 'english',\n",
+      " 'estimator__classifier__C': 100.0,\n",
+      " 'estimator__dim_reduct__n_components': 300,\n",
+      " 'estimator__normalizer__norm': 'l2'}\n"
+     ]
+    }
+   ],
    "source": [
     "param_grid = {\n",
-    "        'bag_of_words__stop_words': ['english'],\n",
-    "        'bag_of_words__ngram_range': [(1, 2)],\n",
-    "        'bag_of_words__max_features': [500],\n",
-    "        'dim_reduct__n_components': [300],\n",
-    "        'normalizer__norm': ['l2'],\n",
-    "        'classifier__C': [100., 0.1, 0.0001]\n",
+    "        'estimator__bag_of_words__stop_words': ['english'],\n",
+    "        'estimator__bag_of_words__ngram_range': [(1, 2)],\n",
+    "        'estimator__bag_of_words__max_features': [500],\n",
+    "        'estimator__dim_reduct__n_components': [300],\n",
+    "        'estimator__normalizer__norm': ['l2'],\n",
+    "        'estimator__classifier__C': [100., 0.1, 0.0001]\n",
     "}\n",
     "\n",
     "clf = SVC()\n",
     "\n",
-    "run(param_grid, clf, comments_file='../../../data/comments.csv')"
+    "run(param_grid=param_grid, classifier=clf, comments_file='../data/train.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
