--- a/multilabel_classifiers/DemoMultilabelClassifiers.ipynb
+++ b/multilabel_classifiers/DemoMultilabelClassifiers.ipynb
@@ -2,34 +2,263 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.dummy import DummyClassifier\n",
     "from run_multilabel_classifier import run"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:  2.9min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean_fit_time': array([26.25975056]),\n",
+      " 'mean_score_time': array([1.77665486]),\n",
+      " 'mean_test_score': array([0.501717]),\n",
+      " 'mean_train_score': array([0.50171703]),\n",
+      " 'param_estimator__bag_of_words__max_features': masked_array(data=[500],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__bag_of_words__ngram_range': masked_array(data=[(1, 2)],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__bag_of_words__stop_words': masked_array(data=['english'],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__classifier__strategy': masked_array(data=['uniform'],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__dim_reduct__n_components': masked_array(data=[300],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__normalizer__norm': masked_array(data=['l2'],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'params': [{'estimator__bag_of_words__max_features': 500,\n",
+      "             'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      "             'estimator__bag_of_words__stop_words': 'english',\n",
+      "             'estimator__classifier__strategy': 'uniform',\n",
+      "             'estimator__dim_reduct__n_components': 300,\n",
+      "             'estimator__normalizer__norm': 'l2'}],\n",
+      " 'rank_test_score': array([1]),\n",
+      " 'split0_test_score': array([0.50099053]),\n",
+      " 'split0_train_score': array([0.50189863]),\n",
+      " 'split1_test_score': array([0.50165089]),\n",
+      " 'split1_train_score': array([0.50173353]),\n",
+      " 'split2_test_score': array([0.49284614]),\n",
+      " 'split2_train_score': array([0.50393484]),\n",
+      " 'split3_test_score': array([0.50275149]),\n",
+      " 'split3_train_score': array([0.50145837]),\n",
+      " 'split4_test_score': array([0.51034786]),\n",
+      " 'split4_train_score': array([0.49955976]),\n",
+      " 'std_fit_time': array([0.81915406]),\n",
+      " 'std_score_time': array([0.2056224]),\n",
+      " 'std_test_score': array([0.00556375]),\n",
+      " 'std_train_score': array([0.00139087])}\n",
+      "=================  Classification report  =================\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.00      0.00      0.00      4625\n",
+      "          1       0.00      0.00      0.00       492\n",
+      "          2       0.00      0.00      0.00      2533\n",
+      "          3       0.00      0.00      0.00       150\n",
+      "          4       0.00      0.00      0.00      2369\n",
+      "          5       0.00      0.00      0.00       416\n",
+      "\n",
+      "avg / total       0.00      0.00      0.00     10585\n",
+      "\n",
+      "=================     Best parameters     =================\n",
+      "{'estimator__bag_of_words__max_features': 500,\n",
+      " 'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      " 'estimator__bag_of_words__stop_words': 'english',\n",
+      " 'estimator__classifier__strategy': 'uniform',\n",
+      " 'estimator__dim_reduct__n_components': 300,\n",
+      " 'estimator__normalizer__norm': 'l2'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
    "source": [
     "param_grid = [{\n",
-    "        'bag_of_words__stop_words': ['english'],\n",
-    "        'bag_of_words__ngram_range': [(1, 2)],\n",
-    "        'bag_of_words__max_features': [500],\n",
-    "        'dim_reduct__n_components': [300],\n",
-    "        'normalizer__norm': ['l2'],\n",
-    "        'classifier__C': [1., 0.1, 0.001]\n",
+    "        'estimator__bag_of_words__stop_words': ['english'],\n",
+    "        'estimator__bag_of_words__ngram_range': [(1, 2)],\n",
+    "        'estimator__bag_of_words__max_features': [500],\n",
+    "        'estimator__dim_reduct__n_components': [300],\n",
+    "        'estimator__normalizer__norm': ['l2'],\n",
+    "        'estimator__classifier__strategy': ['uniform']\n",
+    "}]\n",
+    "\n",
+    "clf = DummyClassifier()\n",
+    "\n",
+    "run(param_grid, clf, comments_file='../data/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  6.9min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean_fit_time': array([31.36015792, 33.09610643]),\n",
+      " 'mean_score_time': array([1.78899193, 1.7961607 ]),\n",
+      " 'mean_test_score': array([0.62564938, 0.62657392]),\n",
+      " 'mean_train_score': array([0.64158665, 0.64261024]),\n",
+      " 'param_estimator__bag_of_words__max_features': masked_array(data=[500, 500],\n",
+      "             mask=[False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__bag_of_words__ngram_range': masked_array(data=[(1, 2), (1, 2)],\n",
+      "             mask=[False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__bag_of_words__stop_words': masked_array(data=['english', 'english'],\n",
+      "             mask=[False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__classifier__C': masked_array(data=[10.0, 100.0],\n",
+      "             mask=[False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__dim_reduct__n_components': masked_array(data=[300, 300],\n",
+      "             mask=[False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'param_estimator__normalizer__norm': masked_array(data=['l2', 'l2'],\n",
+      "             mask=[False, False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object),\n",
+      " 'params': [{'estimator__bag_of_words__max_features': 500,\n",
+      "             'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      "             'estimator__bag_of_words__stop_words': 'english',\n",
+      "             'estimator__classifier__C': 10.0,\n",
+      "             'estimator__dim_reduct__n_components': 300,\n",
+      "             'estimator__normalizer__norm': 'l2'},\n",
+      "            {'estimator__bag_of_words__max_features': 500,\n",
+      "             'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      "             'estimator__bag_of_words__stop_words': 'english',\n",
+      "             'estimator__classifier__C': 100.0,\n",
+      "             'estimator__dim_reduct__n_components': 300,\n",
+      "             'estimator__normalizer__norm': 'l2'}],\n",
+      " 'rank_test_score': array([2, 1]),\n",
+      " 'split0_test_score': array([0.62249615, 0.62403698]),\n",
+      " 'split0_train_score': array([0.64300259, 0.64316768]),\n",
+      " 'split1_test_score': array([0.63812459, 0.63900506]),\n",
+      " 'split1_train_score': array([0.6384899 , 0.63815971]),\n",
+      " 'split2_test_score': array([0.62887959, 0.63020031]),\n",
+      " 'split2_train_score': array([0.64019592, 0.64124154]),\n",
+      " 'split3_test_score': array([0.62535769, 0.62579793]),\n",
+      " 'split3_train_score': array([0.64091134, 0.64360795]),\n",
+      " 'split4_test_score': array([0.61338617, 0.61382651]),\n",
+      " 'split4_train_score': array([0.64533348, 0.64687431]),\n",
+      " 'std_fit_time': array([1.04621723, 0.74571313]),\n",
+      " 'std_score_time': array([0.08520061, 0.03775053]),\n",
+      " 'std_test_score': array([0.00808035, 0.00821216]),\n",
+      " 'std_train_score': array([0.00236743, 0.00286946])}\n",
+      "=================  Classification report  =================\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.87      0.75      0.81      4616\n",
+      "          1       0.52      0.20      0.29       473\n",
+      "          2       0.87      0.72      0.79      2495\n",
+      "          3       0.48      0.24      0.32       134\n",
+      "          4       0.77      0.59      0.67      2352\n",
+      "          5       0.69      0.25      0.36       431\n",
+      "\n",
+      "avg / total       0.82      0.66      0.72     10501\n",
+      "\n",
+      "=================     Best parameters     =================\n",
+      "{'estimator__bag_of_words__max_features': 500,\n",
+      " 'estimator__bag_of_words__ngram_range': (1, 2),\n",
+      " 'estimator__bag_of_words__stop_words': 'english',\n",
+      " 'estimator__classifier__C': 100.0,\n",
+      " 'estimator__dim_reduct__n_components': 300,\n",
+      " 'estimator__normalizer__norm': 'l2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = [{\n",
+    "        'estimator__bag_of_words__stop_words': ['english'],\n",
+    "        'estimator__bag_of_words__ngram_range': [(1, 2)],\n",
+    "        'estimator__bag_of_words__max_features': [500],\n",
+    "        'estimator__dim_reduct__n_components': [300],\n",
+    "        'estimator__normalizer__norm': ['l2'],\n",
+    "        'estimator__classifier__C': [10., 100.]\n",
     "}]\n",
     "\n",
     "\n",
     "clf = LogisticRegression()\n",
     "\n",
-    "run(param_grid, clf, comments_file='../../../data/comments.csv')"
+    "run(param_grid, clf, comments_file='../data/train.csv')"
    ]
   },
   {
