fixed paths in final demo

--- a/binary_classifiers/FinalBinaryDemo.ipynb
+++ b/binary_classifiers/FinalBinaryDemo.ipynb
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_comments_path = os.path.join('../../../', 'data/train_binary.csv')\n",
-    "test_comments_path = os.path.join('../../../', 'data/test_clean_binary.csv')"
+    "train_comments_path = os.path.join('..', '..', '..', 'data', 'train_binary.csv')\n",
+    "test_comments_path = os.path.join('..', '..', '..', 'data', 'test_clean_binary.csv')"
    ]
   },
   {
