--- a/multilabel_classifiers/FinalMultilabelDemo.ipynb
+++ b/multilabel_classifiers/FinalMultilabelDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_comments_path = os.path.join('../', 'data/train.csv')\n",
-    "test_comments_path = os.path.join('../', 'data/test_final.csv')"
+    "train_comments_path = os.path.join('../../../', 'data/train.csv')\n",
+    "test_comments_path = os.path.join('../../../', 'data/test_clean.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,20 +81,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
       "  FutureWarning)\n",
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
       "  str(classes[c]))\n",
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
       "  str(classes[c]))\n",
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
       "  str(classes[c]))\n",
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
       "  str(classes[c]))\n",
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
       "  str(classes[c]))\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    0.6s finished\n",
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    2.1s finished\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/multiclass.py:76: UserWarning: Label 0 is present in all training examples.\n",
       "  str(classes[c]))\n"
      ]
     },
@@ -102,10 +102,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mean_fit_time': array([0.10531893]),\n",
-      " 'mean_score_time': array([0.00997286]),\n",
-      " 'mean_test_score': array([0.37142857]),\n",
-      " 'mean_train_score': array([0.37142857]),\n",
+      "{'mean_fit_time': array([0.3707747]),\n",
+      " 'mean_score_time': array([0.0153358]),\n",
+      " 'mean_test_score': array([0.34285714]),\n",
+      " 'mean_train_score': array([0.34285714]),\n",
       " 'param_estimator__bag_of_words__max_features': masked_array(data=[500],\n",
       "             mask=[False],\n",
       "       fill_value='?',\n",
@@ -136,32 +136,32 @@
       "             'estimator__classifier__strategy': 'uniform',\n",
       "             'estimator__dim_reduct__n_components': 300,\n",
       "             'estimator__normalizer__norm': 'l2'}],\n",
-      " 'rank_test_score': array([1]),\n",
-      " 'split0_test_score': array([0.28571429]),\n",
-      " 'split0_train_score': array([0.39285714]),\n",
-      " 'split1_test_score': array([0.28571429]),\n",
-      " 'split1_train_score': array([0.39285714]),\n",
-      " 'split2_test_score': array([0.57142857]),\n",
-      " 'split2_train_score': array([0.32142857]),\n",
+      " 'rank_test_score': array([1], dtype=int32),\n",
+      " 'split0_test_score': array([0.42857143]),\n",
+      " 'split0_train_score': array([0.32142857]),\n",
+      " 'split1_test_score': array([0.35714286]),\n",
+      " 'split1_train_score': array([0.33928571]),\n",
+      " 'split2_test_score': array([0.35714286]),\n",
+      " 'split2_train_score': array([0.33928571]),\n",
       " 'split3_test_score': array([0.35714286]),\n",
-      " 'split3_train_score': array([0.375]),\n",
-      " 'split4_test_score': array([0.35714286]),\n",
+      " 'split3_train_score': array([0.33928571]),\n",
+      " 'split4_test_score': array([0.21428571]),\n",
       " 'split4_train_score': array([0.375]),\n",
-      " 'std_fit_time': array([0.01451583]),\n",
-      " 'std_score_time': array([0.00227398]),\n",
-      " 'std_test_score': array([0.10497813]),\n",
-      " 'std_train_score': array([0.02624453])}\n",
+      " 'std_fit_time': array([0.47891466]),\n",
+      " 'std_score_time': array([0.00702941]),\n",
+      " 'std_test_score': array([0.06998542]),\n",
+      " 'std_train_score': array([0.01749636])}\n",
       "=================  Classification report  =================\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       1.00      1.00      1.00        30\n",
-      "          1       0.00      0.00      0.00         1\n",
-      "          2       0.00      0.00      0.00        14\n",
+      "          1       0.00      0.00      0.00         3\n",
+      "          2       0.00      0.00      0.00        19\n",
       "          3       0.00      0.00      0.00         1\n",
-      "          4       0.00      0.00      0.00        19\n",
-      "          5       0.00      0.00      0.00         5\n",
+      "          4       0.00      0.00      0.00        18\n",
+      "          5       0.00      0.00      0.00         4\n",
       "\n",
-      "avg / total       0.43      0.43      0.43        70\n",
+      "avg / total       0.40      0.40      0.40        75\n",
       "\n",
       "=================     Best parameters     =================\n",
       "{'estimator__bag_of_words__max_features': 500,\n",
@@ -176,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jasmi\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
@@ -187,23 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./saved_models/dummy_trained_mlutils.pkl', 'wb') as saved_model:\n",
-    "\tpickle.dump(trained_clf, file=saved_model)"
+    "    pickle.dump(trained_clf, file=saved_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "None\n",
       "0 6090\n",
       "1 367\n",
       "2 3691\n",
@@ -229,21 +230,21 @@
      "evalue": "'NoneType' object has no attribute 'predict'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-2f707edd69a0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_load_comments\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_comments_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0my_test_predict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloaded_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_predict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'predict'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-7a851c081092>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloaded_clf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_load_comments\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_comments_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0my_test_predict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloaded_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test_predict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'predict'"
      ]
     }
    ],
    "source": [
     "with open('./saved_models/dummy_trained_mlutils.pkl', 'rb') as saved_model:\n",
-    "\tloaded_clf = pickle.load(saved_model)\n",
+    "    loaded_clf = pickle.load(saved_model)\n",
+    "    print(loaded_clf)\n",
+    "    X_test, y_test = _load_comments(test_comments_path)\n",
+    "    y_test_predict = loaded_clf.predict(X_test)\n",
     "\n",
-    "\tX_test, y_test = _load_comments(test_comments_path)\n",
-    "\ty_test_predict = loaded_clf.predict(X_test)\n",
-    "\n",
-    "\tprint(classification_report(y_test, y_test_predict))"
+    "    print(classification_report(y_test, y_test_predict))"
    ]
   },
   {
