--- a/multilabel_classifiers/FinalMultilabelDemo.ipynb
+++ b/multilabel_classifiers/FinalMultilabelDemo.ipynb
@@ -29,12 +29,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dummy classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dummy\n",
     "param_grid = [{\n",
     "        'estimator__bag_of_words__stop_words': ['english'],\n",
     "        'estimator__bag_of_words__ngram_range': [(1, 2)],\n",
@@ -45,6 +51,13 @@
     "}]\n",
     "\n",
     "clf = DummyClassifier()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train phase"
    ]
   },
   {
@@ -198,6 +211,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -205,6 +225,13 @@
    "source": [
     "with open('./saved_models/dummy_trained_mlutils.pkl', 'wb') as saved_model:\n",
     "    pickle.dump(trained_clf, file=saved_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loading the model and testing it"
    ]
   },
   {
@@ -273,12 +300,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# logreg\n",
     "param_grid = [{\n",
     "        'estimator__bag_of_words__stop_words': ['english'],\n",
     "        'estimator__bag_of_words__ngram_range': [(1, 2)],\n",
@@ -290,6 +323,13 @@
     "\n",
     "\n",
     "clf = LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train phase"
    ]
   },
   {
@@ -447,6 +487,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -454,6 +501,13 @@
    "source": [
     "with open('./saved_models/logreg_trained_mlutils.pkl', 'wb') as saved_model:\n",
     "    pickle.dump(trained_clf, file=saved_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loading the model and testing it"
    ]
   },
   {
@@ -523,12 +577,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# svm\n",
     "param_grid = {\n",
     "        'estimator__bag_of_words__stop_words': ['english'],\n",
     "        'estimator__bag_of_words__ngram_range': [(1, 2)],\n",
@@ -539,6 +599,13 @@
     "}\n",
     "\n",
     "clf = SVC()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train pahse"
    ]
   },
   {
@@ -746,6 +813,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -753,6 +827,13 @@
    "source": [
     "with open('./saved_models/svm_trained_mlutils.pkl', 'wb') as saved_model:\n",
     "    pickle.dump(trained_clf, file=saved_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loading the model and testing it"
    ]
   },
   {
