--- a/binary_classifiers/FinalBinaryDemo.ipynb
+++ b/binary_classifiers/FinalBinaryDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +64,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   38.3s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================  Classification report  =================\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.50      0.50      0.50      4825\n",
+      "          1       0.51      0.51      0.51      4910\n",
+      "\n",
+      "avg / total       0.51      0.51      0.51      9735\n",
+      "\n",
+      "'=================     Best parameters     ================='\n",
+      "{'bag_of_words__max_features': 500, 'bag_of_words__ngram_range': (1, 2), 'bag_of_words__stop_words': 'english', 'classifier__strategy': 'uniform', 'dim_reduct__n_components': 300, 'normalizer__norm': 'l2'}\n"
+     ]
+    }
+   ],
    "source": [
     "trained_clf = run(param_grid, clf, comments_file=train_comments_path)"
    ]
@@ -80,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.50      0.50      0.50      6242\n",
+      "          1       0.50      0.50      0.50      6243\n",
+      "\n",
+      "avg / total       0.50      0.50      0.50     12485\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('./saved_models/dummy_trained_binary.pkl', 'rb') as saved_model:\n",
     "\tloaded_clf = pickle.load(saved_model)\n",
@@ -119,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +197,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  1.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================  Classification report  =================\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.81      0.91      0.85      4905\n",
+      "          1       0.89      0.78      0.83      4830\n",
+      "\n",
+      "avg / total       0.85      0.84      0.84      9735\n",
+      "\n",
+      "'=================     Best parameters     ================='\n",
+      "{'bag_of_words__max_features': 500, 'bag_of_words__ngram_range': (1, 2), 'bag_of_words__stop_words': 'english', 'classifier__C': 10.0, 'dim_reduct__n_components': 300, 'normalizer__norm': 'l2'}\n"
+     ]
+    }
+   ],
    "source": [
     "trained_clf = run(param_grid, clf, comments_file=train_comments_path)"
    ]
@@ -160,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +269,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.84      0.85      0.84      6242\n",
+      "          1       0.85      0.84      0.84      6243\n",
+      "\n",
+      "avg / total       0.84      0.84      0.84     12485\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('./saved_models/log_reg_trained_binary.pkl', 'rb') as saved_model:\n",
     "\tloaded_clf = pickle.load(saved_model)\n",
@@ -199,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +330,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  15 out of  15 | elapsed:  3.3min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================  Classification report  =================\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.75      0.89      0.82      4920\n",
+      "          1       0.86      0.70      0.77      4815\n",
+      "\n",
+      "avg / total       0.81      0.80      0.79      9735\n",
+      "\n",
+      "'=================     Best parameters     ================='\n",
+      "{'bag_of_words__max_features': 500, 'bag_of_words__ngram_range': (1, 2), 'bag_of_words__stop_words': 'english', 'classifier__max_depth': 5, 'dim_reduct__n_components': 300, 'normalizer__norm': 'l2'}\n"
+     ]
+    }
+   ],
    "source": [
     "trained_clf = run(param_grid, clf, comments_file=train_comments_path)"
    ]
@@ -240,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,9 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.77      0.87      0.82      6242\n",
+      "          1       0.85      0.75      0.79      6243\n",
+      "\n",
+      "avg / total       0.81      0.81      0.81     12485\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('./saved_models/dec_tree_trained_binary.pkl', 'rb') as saved_model:\n",
     "\tloaded_clf = pickle.load(saved_model)\n",
@@ -279,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,9 +464,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   41.1s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================  Classification report  =================\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.76      0.79      0.77      4827\n",
+      "          1       0.78      0.75      0.77      4908\n",
+      "\n",
+      "avg / total       0.77      0.77      0.77      9735\n",
+      "\n",
+      "'=================     Best parameters     ================='\n",
+      "{'bag_of_words__max_features': 500, 'bag_of_words__ngram_range': (1, 2), 'bag_of_words__stop_words': 'english', 'classifier__alpha': 1.0, 'classifier__binarize': 0.0, 'dim_reduct__n_components': 300, 'normalizer__norm': 'l2'}\n"
+     ]
+    }
+   ],
    "source": [
     "trained_clf = run(param_grid, clf, comments_file=train_comments_path)"
    ]
@@ -321,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,9 +536,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.80      0.72      0.76      6242\n",
+      "          1       0.75      0.82      0.78      6243\n",
+      "\n",
+      "avg / total       0.78      0.77      0.77     12485\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('./saved_models/naiveB_trained_binary.pkl', 'rb') as saved_model:\n",
     "\tloaded_clf = pickle.load(saved_model)\n",
@@ -360,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,9 +597,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zvonimir/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2026: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 13.2min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================  Classification report  =================\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.76      0.90      0.82      4817\n",
+      "          1       0.88      0.72      0.79      4918\n",
+      "\n",
+      "avg / total       0.82      0.81      0.81      9735\n",
+      "\n",
+      "'=================     Best parameters     ================='\n",
+      "{'bag_of_words__lowercase': True, 'bag_of_words__max_features': 500, 'bag_of_words__ngram_range': (1, 2), 'bag_of_words__stop_words': 'english', 'dim_reduct__n_components': 100, 'normalizer__norm': 'l2'}\n"
+     ]
+    }
+   ],
    "source": [
     "trained_clf = run(param_grid, clf, comments_file=train_comments_path)"
    ]
@@ -401,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,9 +669,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.79      0.85      0.82      6242\n",
+      "          1       0.84      0.78      0.80      6243\n",
+      "\n",
+      "avg / total       0.81      0.81      0.81     12485\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('./saved_models/SVM_trained_binary.pkl', 'rb') as saved_model:\n",
     "\tloaded_clf = pickle.load(saved_model)\n",
